<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/icon"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/lib_rate"
            app:lottie_loop="true"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_five_star_title"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rate_tips"
            android:textColor="?android:textColorSecondary"
            android:textSize="14sp"
            android:layout_marginTop="8dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="?colorControlHighlight" />

        <com.willy.ratingbar.RotationRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srb_numStars="5"
            app:srb_minimumStars="1"
            app:srb_rating="5"
            app:srb_stepSize="1"
            app:srb_starWidth="40dp"
            app:srb_starHeight="40dp"
            app:srb_drawableEmpty="@drawable/icon_rate_inactive"
            app:srb_drawableFilled="@drawable/icon_rate_active"
            android:contentDescription="@string/app_name"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="?colorControlHighlight"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/bg_btn_install_ads"
            android:textAllCaps="false"
            android:gravity="center"
            android:paddingVertical="10dp"/>

        <TextView
            android:id="@+id/btnLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/maybe_later"
            android:textColor="?android:textColorSecondary"
            android:textSize="14sp"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>